fix ipad view menu width too big and tweek asus tablet menu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -480,7 +480,7 @@ form label {
         height: 60px;
         background-color: var(--black);
         text-align: left;
-        width: 1000px;
+        width: 768px;
   }
   nav ul {
         max-width: 1300px;
@@ -669,10 +669,10 @@ form label {
 /* Media query Android 8inch Tablet Asus ZenPad z380 1280 x 800 IPS */
 @media screen and (min-width: 800px) and (max-width: 1280px){
     .position_header_title {
-        width: 1100px;
+        width: 950px;
     }
      nav {
-        width: 1100px;
+        width: 950px;
      }
 
 }
